@@ -20,7 +20,7 @@ local TotalSheet = Sprite()
 
 local LeaderboardSprite = Sprite()
 
-local StreakPos = Vector(212, 12) + Vector(36, 24)
+local StreakPos = Vector(428, 110) + Vector(36, 24)
 StreakSheet.Offset = Vector(-36, -24)
 
 local TotalStreakText = "Total Runs: 0"
@@ -120,17 +120,23 @@ local function RenderDailyStats()
     local pos = Isaac.WorldToMenuPosition(_MainMenuType.DAILYRUN, StreakPos)
     StreakSheet:Render(pos)
     font:DrawString(WinStreak, pos.X, pos.Y, fontcolor, 0, false)
-    pos = Isaac.WorldToMenuPosition(_MainMenuType.DAILYRUN, Vector(286, 90))
+    pos = Isaac.WorldToMenuPosition(_MainMenuType.DAILYRUN, Vector(470, 205))
     TotalSheet:RenderLayer(0, pos)
+    
+    local goalPosition = Isaac.WorldToMenuPosition(_MainMenuType.DAILYRUN, Vector(258, 80))
+    local goalFrame = GetGoalDestination(GetStageGoal, isAltPath) + diffOffsetFrameNum
+
     if isMegaSatan then
-        --GoalDestinationIcon:SetFrame(6)
-		LeaderboardSprite:SetFrame(6 + diffOffsetFrameNum)
+        LeaderboardSprite:SetFrame(6 + diffOffsetFrameNum)
+        LeaderboardSprite:RenderLayer(0, goalPosition)
+        LeaderboardSprite:SetFrame(goalFrame)
+        LeaderboardSprite:RenderLayer(0, goalPosition - Vector(16, 0)) --alr variant -8,48
     else
-        --GoalDestinationIcon:SetFrame(GetGoalDestination(GetStageGoal, isAltPath))
-		LeaderboardSprite:SetFrame(GetGoalDestination(GetStageGoal, isAltPath) + diffOffsetFrameNum)
+        LeaderboardSprite:SetFrame(goalFrame)
+        LeaderboardSprite:RenderLayer(0, goalPosition)
     end
     --GoalDestinationIcon:RenderLayer(0, Vector(pos.X + 69, pos.Y - 32))
-	LeaderboardSprite:RenderLayer(0, Vector(pos.X + 78, pos.Y - 26))
+	
     --[[if isHardMode then
         HardModeIcon:RenderLayer(0, Vector(pos.X + 75, pos.Y - 82))
     end]]
